syntax = "proto3";

package lumas_core_camera;

import "google/protobuf/struct.proto";

service Camera {
  rpc add      (CameraConfig) returns (Result);
  rpc list     (ListRequest)  returns (stream CameraConfig);
  rpc remove   (CameraID) returns (Result);
  rpc describe (CameraID) returns (CameraInfo);
}

//It's unlikely we'll ever want to pass arguments to list
// but this message is hear just in case
message ListRequest {
  repeated CameraID cameraID = 1;
}

message CameraID {
  string id = 1;
}

message CameraConfig {
  CameraInfo camera = 1;
  string name = 2;
  string provider = 3;
  string providerAddress = 4;
  google.protobuf.Struct providerConfig = 5;
}

message CameraInfo {
  string     id = 1;
  string     name = 2;
  string     videoFormat = 4;
  string     audioFormat = 5;
  string     pixFormat = 6;
  int32      frameRate = 7;
  string     provider = 8;
  string     videoSDP = 9;
  string     audioSDP = 10;
  bool       hasAudio = 11;
  bool       hasVideo = 12;
  bool       hasPan = 13;
  bool       hasTilt = 14;
  bool       hasZoom = 15;
  bool       acceptsAudio = 16;
}

message Result {
  bool   successful = 1;
  string errorKind = 2;
  string message = 3;
}
